--- a/Group11/Bhayani_M2DigArchProject1.ipynb
+++ b/Group11/Bhayani_M2DigArchProject1.ipynb
@@ -137,16 +137,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jzEgciLBv80K",
-        "outputId": "291992b7-9508-40ed-a7a4-998752053d47"
+        "outputId": "5c0a06e0-55bd-4c33-a82e-b0f11d5f61bc"
       },
-      "execution_count": 34,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n"
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
           ]
         }
       ]
@@ -160,7 +160,7 @@
       "metadata": {
         "id": "EY-EUTAj8vWL"
       },
-      "execution_count": 35,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -178,9 +178,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lmUkmCVpDdZH",
-        "outputId": "45248562-9688-4a66-c69a-b06d89c2b46e"
+        "outputId": "86f97e07-6c30-45a3-e217-4c3f61a9afc6"
       },
-      "execution_count": 50,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,7 +205,7 @@
       "metadata": {
         "id": "jJS8-Y3B87RM"
       },
-      "execution_count": 39,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -214,18 +214,18 @@
         "print(get_total_word_count(book_2))\n",
         "print(get_n_most_common(book_2, 15))\n",
         "print(find_bucketed_word_distribution(book_2, \"jay\", 5000))\n",
-        "print(get_window_around_word(book_1, 18026, 25))\n",
-        "print(get_window_around_word(book_1, 26061, 25))\n",
-        "print(get_window_around_word(book_1, 26935, 25))"
+        "print(get_window_around_word(book_2, 18026, 25))\n",
+        "print(get_window_around_word(book_2, 26061, 25))\n",
+        "print(get_window_around_word(book_2, 26935, 25))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "NsQb3R8LD844",
-        "outputId": "628ce318-0900-41ec-9d13-d930faeb9bf7"
+        "outputId": "00ce010b-a363-4a87-f0ab-6a1716c3e2b3"
       },
-      "execution_count": 52,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,9 +234,9 @@
             "27327\n",
             "[('said', 232), ('gatsby', 175), ('“i', 175), ('tom', 163), ('one', 135), ('daisy', 135), ('like', 116), ('came', 108), ('back', 105), ('little', 102), ('went', 90), ('man', 86), ('project', 85), ('house', 85), ('eyes', 85)]\n",
             "[0, 0, 1, 2, 1, 4, 0, 1, 0, 0, 0]\n",
-            "['give', 'her', 'an', 'education', 'superior', 'to', 'that', 'which', 'she', 'had', 'at', 'first', 'intended', 'this', 'benefit', 'was', 'fully', 'repaid', 'justine', 'was', 'the', 'most', 'grateful', 'little', 'creature', 'in', 'the', 'world', 'i', 'do', 'not', 'mean', 'that', 'she', 'made', 'any', 'professions', 'i', 'never', 'heard', 'one', 'pass', 'her', 'lips', 'but', 'you', 'could', 'see', 'by', 'her', 'eyes']\n",
-            "['awful', 'boundary', 'between', 'life', 'and', 'death', 'felt', 'not', 'as', 'i', 'did', 'such', 'deep', 'and', 'bitter', 'agony', 'i', 'gnashed', 'my', 'teeth', 'and', 'ground', 'them', 'together', 'uttering', 'a', 'groan', 'that', 'came', 'from', 'my', 'inmost', 'soul', 'justine', 'started', 'when', 'she', 'saw', 'who', 'it', 'was', 'she', 'approached', 'me', 'and', 'said', '“dear', 'sir', 'you', 'are', 'very']\n",
-            "['solitude', 'my', 'father', 'observed', 'with', 'pain', 'the', 'alteration', 'perceptible', 'in', 'my', 'disposition', 'and', 'habits', 'and', 'endeavoured', 'by', 'arguments', 'deduced', 'from', 'the', 'feelings', 'of', 'his', 'serene', 'conscience', 'and', 'guiltless', 'life', 'to', 'inspire', 'me', 'with', 'fortitude', 'and', 'awaken', 'in', 'me', 'the', 'courage', 'to', 'dispel', 'the', 'dark', 'cloud', 'which', 'brooded', 'over', 'me', '“do', 'you']\n"
+            "['the', 'faintest', 'idea', 'what', '“this', 'matter”', 'was', 'but', 'i', 'was', 'more', 'annoyed', 'than', 'interested', 'i', 'hadn’t', 'asked', 'jordan', 'to', 'tea', 'in', 'order', 'to', 'discuss', 'mr', 'jay', 'gatsby', 'i', 'was', 'sure', 'the', 'request', 'would', 'be', 'something', 'utterly', 'fantastic', 'and', 'for', 'a', 'moment', 'i', 'was', 'sorry', 'i’d', 'ever', 'set', 'foot', 'upon', 'his', 'overpopulated']\n",
+            "['gatz', 'who', 'had', 'been', 'loafing', 'along', 'the', 'beach', 'that', 'afternoon', 'in', 'a', 'torn', 'green', 'jersey', 'and', 'a', 'pair', 'of', 'canvas', 'pants', 'but', 'it', 'was', 'already', 'jay', 'gatsby', 'who', 'borrowed', 'a', 'rowboat', 'pulled', 'out', 'to', 'the', 'tuolomee', 'and', 'informed', 'cody', 'that', 'a', 'wind', 'might', 'catch', 'him', 'and', 'break', 'him', 'up', 'in', 'half']\n",
+            "['against', 'him', 'but', 'what', 'remained', 'of', 'the', 'millions', 'went', 'intact', 'to', 'ella', 'kaye', 'he', 'was', 'left', 'with', 'his', 'singularly', 'appropriate', 'education', 'the', 'vague', 'contour', 'of', 'jay', 'gatsby', 'had', 'filled', 'out', 'to', 'the', 'substantiality', 'of', 'a', 'man', '------------------------------------------------------------------------', 'he', 'told', 'me', 'all', 'this', 'very', 'much', 'later', 'but', 'i’ve', 'put', 'it', 'down', 'here']\n"
           ]
         }
       ]
@@ -250,7 +250,7 @@
       "metadata": {
         "id": "_8sZ8qla9E53"
       },
-      "execution_count": 43,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -259,18 +259,18 @@
         "print(get_total_word_count(book_3))\n",
         "print(get_n_most_common(book_3, 15))\n",
         "print(find_bucketed_word_distribution(book_3, \"alice\", 3000))\n",
-        "print(get_window_around_word(book_1, 514, 25))\n",
-        "print(get_window_around_word(book_1, 9033, 25))\n",
-        "print(get_window_around_word(book_1, 25617, 25))"
+        "print(get_window_around_word(book_3, 514, 25))\n",
+        "print(get_window_around_word(book_3, 9033, 25))\n",
+        "print(get_window_around_word(book_3, 25617, 25))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KfnV9-4aEP3g",
-        "outputId": "3275d67a-7952-491a-9b76-bfbbdf5334d6"
+        "outputId": "2d8267db-c2ed-45d8-d954-91a07812f2ec"
       },
-      "execution_count": 53,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,9 +279,9 @@
             "15785\n",
             "[('said', 455), ('alice', 374), ('little', 124), ('“i', 119), ('', 88), ('one', 88), ('project', 83), ('went', 83), ('like', 78), ('could', 75), ('thought', 73), ('would', 72), ('see', 65), ('queen', 64), ('know', 61)]\n",
             "[29, 37, 34, 44, 59, 55, 56, 34, 26, 0]\n",
-            "['attracts', 'the', 'needle', 'and', 'may', 'regulate', 'a', 'thousand', 'celestial', 'observations', 'that', 'require', 'only', 'this', 'voyage', 'to', 'render', 'their', 'seeming', 'eccentricities', 'consistent', 'for', 'ever', 'i', 'shall', 'satiate', 'my', 'ardent', 'curiosity', 'with', 'the', 'sight', 'of', 'a', 'part', 'of', 'the', 'world', 'never', 'before', 'visited', 'and', 'may', 'tread', 'a', 'land', 'never', 'before', 'imprinted', 'by', 'the']\n",
-            "['in', 'the', 'eighteenth', 'century', 'but', 'while', 'i', 'followed', 'the', 'routine', 'of', 'education', 'in', 'the', 'schools', 'of', 'geneva', 'i', 'was', 'to', 'a', 'great', 'degree', 'self-taught', 'with', 'regard', 'to', 'my', 'favourite', 'studies', 'my', 'father', 'was', 'not', 'scientific', 'and', 'i', 'was', 'left', 'to', 'struggle', 'with', 'a', 'child’s', 'blindness', 'added', 'to', 'a', 'student’s', 'thirst', 'for']\n",
-            "['my', 'poor', 'girl”', 'said', 'elizabeth', '“why', 'do', 'you', 'kneel', 'if', 'you', 'are', 'innocent?', 'i', 'am', 'not', 'one', 'of', 'your', 'enemies', 'i', 'believed', 'you', 'guiltless', 'notwithstanding', 'every', 'evidence', 'until', 'i', 'heard', 'that', 'you', 'had', 'yourself', 'declared', 'your', 'guilt', 'that', 'report', 'you', 'say', 'is', 'false', 'and', 'be', 'assured', 'dear', 'justine', 'that', 'nothing', 'can']\n"
+            "['she', 'was', 'to', 'get', 'out', 'again', 'the', 'rabbit-hole', 'went', 'straight', 'on', 'like', 'a', 'tunnel', 'for', 'some', 'way', 'and', 'then', 'dipped', 'suddenly', 'down', 'so', 'suddenly', 'that', 'alice', 'had', 'not', 'a', 'moment', 'to', 'think', 'about', 'stopping', 'herself', 'before', 'she', 'found', 'herself', 'falling', 'down', 'a', 'very', 'deep', 'well', 'either', 'the', 'well', 'was', 'very', 'deep']\n",
+            "['i', 'should', 'think', 'you’ll', 'feel', 'it', 'a', 'little', 'queer', 'won’t', 'you?”', '“not', 'a', 'bit”', 'said', 'the', 'caterpillar', '“well', 'perhaps', 'your', 'feelings', 'may', 'be', 'different”', 'said', 'alice', '“all', 'i', 'know', 'is', 'it', 'would', 'feel', 'very', 'queer', 'to', '_me_”', '“you!”', 'said', 'the', 'caterpillar', 'contemptuously', '“who', 'are', '_you?_”', 'which', 'brought', 'them', 'back', 'again', 'to']\n",
+            "['of', 'evidence', 'we’ve', 'heard', 'yet”', 'said', 'the', 'king', 'rubbing', 'his', 'hands', '“so', 'now', 'let', 'the', 'jury—”', '“if', 'any', 'one', 'of', 'them', 'can', 'explain', 'it”', 'said', 'alice', '(she', 'had', 'grown', 'so', 'large', 'in', 'the', 'last', 'few', 'minutes', 'that', 'she', 'wasn’t', 'a', 'bit', 'afraid', 'of', 'interrupting', 'him)', '“i’ll', 'give', 'him', 'sixpence', '_i_', 'don’t']\n"
           ]
         }
       ]
