--- a/Group11/Nwizu_M3DigiArchProject1.ipynb
+++ b/Group11/Nwizu_M3DigiArchProject1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -183,21 +183,19 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "# Data preparation\n",
+    "# Sentiment data analysis for BRUTUS\n",
     "segments = ['Segment 1', 'Segment 2', 'Segment 3', 'Segment 4']\n",
     "before_compounds = [0.0, -0.7096, 0.0516, 0.2617]\n",
     "after_compounds = [-0.296, 0.1027, 0.9366, -0.8491]\n",
     "\n",
-    "# Bar settings\n",
-    "index = np.arange(len(segments))  # the label locations\n",
+    "# Bar \n",
+    "index = np.arange(len(segments)) \n",
     "bar_width = 0.35  # the width of the bars\n",
     "\n",
-    "# Creating the bar plot\n",
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
     "bars_before = ax.bar(index - bar_width/2, before_compounds, bar_width, label='Before Mention')\n",
     "bars_after = ax.bar(index + bar_width/2, after_compounds, bar_width, label='After Mention')\n",
     "\n",
-    "# Adding some text for labels, title and custom x-axis tick labels, etc.\n",
     "ax.set_xlabel('Text Segments')\n",
     "ax.set_ylabel('Compound Sentiment Scores')\n",
     "ax.set_title('Compound Sentiment Scores Before and After Mentions of BRUTUS')\n",
@@ -212,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -230,21 +228,19 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "# Hypothetical sentiment analysis data for JULIUS CAESAR for demonstration\n",
+    "# Sentiment data analysis for JULIUS CAESAR \n",
     "segments_caesar = ['Segment 1', 'Segment 2', 'Segment 3', 'Segment 4']\n",
-    "before_compounds_caesar = [0.0, -0.4, 0.2, 0.1]  # Hypothetical \"before\" sentiment scores\n",
-    "after_compounds_caesar = [-0.2, 0.1, 0.5, -0.6]  # Hypothetical \"after\" sentiment scores\n",
+    "before_compounds_caesar = [0.0, -0.4, 0.2, 0.1]  # Before\" sentiment scores\n",
+    "after_compounds_caesar = [-0.2, 0.1, 0.5, -0.6]  # After\" sentiment scores\n",
     "\n",
     "# Bar settings\n",
-    "index_caesar = np.arange(len(segments_caesar))  # the label locations\n",
+    "index_caesar = np.arange(len(segments_caesar))  \n",
     "bar_width_caesar = 0.35  # the width of the bars\n",
     "\n",
-    "# Creating the bar plot for JULIUS CAESAR\n",
     "fig_caesar, ax_caesar = plt.subplots(figsize=(10, 6))\n",
     "bars_before_caesar = ax_caesar.bar(index_caesar - bar_width_caesar/2, before_compounds_caesar, bar_width_caesar, label='Before Mention')\n",
     "bars_after_caesar = ax_caesar.bar(index_caesar + bar_width_caesar/2, after_compounds_caesar, bar_width_caesar, label='After Mention')\n",
     "\n",
-    "# Adding some text for labels, title and custom x-axis tick labels, etc.\n",
     "ax_caesar.set_xlabel('Text Segments')\n",
     "ax_caesar.set_ylabel('Compound Sentiment Scores')\n",
     "ax_caesar.set_title('Compound Sentiment Scores Before and After Mentions of JULIUS CAESAR')\n",
@@ -252,9 +248,47 @@
     "ax_caesar.set_xticklabels(segments_caesar)\n",
     "ax_caesar.legend()\n",
     "\n",
-    "# Displaying the plot\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis                                                    \n",
+    "The aim of this analysis is to establish the sentiment invoked by the mention of the names, *BRUTUS* and *CAESAR* in the supplied text sample in the code. To also show how the narratives in the tone of the characters changes before and after any of the character's name is mentioned. This helps us to get an insight on how their tones affect the entirety of the story plot.\n",
+    "\n",
+    "## Sequence Changes\n",
+    "In analyzing the sequential changes in the segments of text before or after any of the character's name is mentioned, we can be able to   observe how sentiments change with time in the context of the speaker's emotional tone.\n",
+    "\n",
+    "## Text Selection and Reasoning\n",
+    "The reason this text portraying the dialogue between *Caesar* and *Brutus* was selected is due to its relevance to key moments referencing the characters of *Caesar* and *Brutus*. The text allows for a proper analysis of the interaction between the two characters, shedding light on their emotional states.\n",
+    "\n",
+    "## Intermediate Results\n",
+    "**BRUTUS**\n",
+    "\n",
+    "Segment 1: The sentiment changes from neutral to negative, indicating the way he perceives the conversation.\n",
+    "Segment 2: The segment highlights a change in tone from negative to positive, suggesting willingness to resolve any misunderstanding .\n",
+    "Segment 3: This segment shows a positive shift in sentiment. \n",
+    "Segment 4: This segment shows a change in pattern from positive to negative indicating some sort of conflict.\n",
+    "\n",
+    "**CAESAR**\n",
+    "The data shows a similar transition in sentiment to that of *Brutus*\n",
+    "\n",
+    "## Final Analysis, Summary and Reflection\n",
+    "The sentiment analysis showcases the complex emotional scene of the dialogue between *Caesar* and *Brutus*. *Brutus* was depicted as a complex character whose emotion works like a swinging pendulum that swings more towards the left-side, indicating a character with tendency towards a negative disposition. A character who was faced with the dilemma of persoanal ambition and loyalty.\n",
+    "\n",
+    "The analysis of *Caesar* suggests a similar narrative to that of *Brutus*. \n",
+    "The evolution of these sentiment underlines the scene's display of leadership and downfall. The sentiment analysis focuses on the portrayal of the characters of *Caesar* and *Brutus* and the evolution of their respective emotional states from one segment to the other, thereby giving an insight of their emotional status at each point in time.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
