Added some more questions and a comment on the garbage bag.

--- a/Embed10/545Project3/MovieEmbedExplore.ipynb
+++ b/Embed10/545Project3/MovieEmbedExplore.ipynb
@@ -665,7 +665,12 @@
     "            \"a phot of a fence\",\n",
     "            \"a photo of a lawn mower\",\n",
     "            \"a phot of a flower\",\n",
-    "            \" a phot of insects fighting\"]\n",
+    "            \"a photo of insects fighting\",\n",
+    "            \"a photo of a white dog with brown spots\",\n",
+    "            \"a photo of a black dog\",\n",
+    "            \"a photo of a chain link fence with black garbage bag\",\n",
+    "            \"a photo of a fence\",\n",
+    "            \"a photo\"]\n",
     "inputs = processor(text=questions, return_tensors=\"pt\", padding=True)\n",
     "text_embeddings = model.get_text_features(**inputs)\n",
     "\n",
@@ -678,15 +683,23 @@
     "\n",
     "image_root = 'thumbnails_folder2large/'\n",
     "\n",
-    "# Display the top 5 matches\n",
+    "# Display the top match for each question\n",
     "for i in top_matches[:len(questions)]:\n",
     "    display(Image(filename=image_root+movie_embeddings[i]['input']))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cec0ad27-a446-48b9-9917-db7dbe209253",
+   "metadata": {},
+   "source": [
+    "The garbage bag by the fence seems to be close to a lot of wuestions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c96a536e-2d7b-4772-834b-b286bdc468c3",
+   "id": "e6635a3b-f9e4-4016-b0de-81a5bbb6164c",
    "metadata": {},
    "outputs": [],
    "source": []
