--- a/Embed10/545Project3/MovieEmbedExplore.ipynb
+++ b/Embed10/545Project3/MovieEmbedExplore.ipynb
@@ -693,7 +693,7 @@
    "id": "cec0ad27-a446-48b9-9917-db7dbe209253",
    "metadata": {},
    "source": [
-    "The garbage bag by the fence seems to be close to a lot of wuestions."
+    "The garbage bag by the fence seems to be close to a lot of questions."
    ]
   },
   {
