Added Google Siglip.

--- a/Embed10/545Project3/MovieEmbedExplore.ipynb
+++ b/Embed10/545Project3/MovieEmbedExplore.ipynb
@@ -668,9 +668,7 @@
     "            \"a photo of insects fighting\",\n",
     "            \"a photo of a white dog with brown spots\",\n",
     "            \"a photo of a black dog\",\n",
-    "            \"a photo of a chain link fence with black garbage bag\",\n",
-    "            \"a photo of a fence\",\n",
-    "            \"a photo\"]\n",
+    "            \"a photo of a chain link fence with black garbage bag\"]\n",
     "inputs = processor(text=questions, return_tensors=\"pt\", padding=True)\n",
     "text_embeddings = model.get_text_features(**inputs)\n",
     "\n",
@@ -693,13 +691,47 @@
    "id": "cec0ad27-a446-48b9-9917-db7dbe209253",
    "metadata": {},
    "source": [
-    "The garbage bag by the fence seems to be close to a lot of questions."
+    "The garbage bag by the fence seems to be close to a lot of questions :)\n",
+    "\n",
+    "#### Now to try the Google Siglip model\n",
+    "I did not have protobuf and had to pip install it."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6635a3b-f9e4-4016-b0de-81a5bbb6164c",
+   "id": "962bc87d-9676-4f55-b9ec-18842bd906f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "from transformers import AutoProcessor, AutoModel\n",
+    "query = \"a photo of a dog\"\n",
+    "image_root = 'thumbnails_folder2large/'\n",
+    "model = AutoModel.from_pretrained(\"google/siglip-base-patch16-224\")\n",
+    "processor = AutoProcessor.from_pretrained(\"google/siglip-base-patch16-224\")\n",
+    "\n",
+    "def predict_and_show_image_by_index(idx): \n",
+    "    image = Image.open(image_root+movie_embeddings[idx]['input'])\n",
+    "    inputs = processor(text=query, images=image, padding=\"max_length\", return_tensors=\"pt\")\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(**inputs)\n",
+    "\n",
+    "    logits_per_image = outputs.logits_per_image\n",
+    "    probs = torch.sigmoid(logits_per_image) # these are the probabilities\n",
+    "    print(f\"{probs[0][0]:.1%} that image is '{query}'\")\n",
+    "    display(image)\n",
+    "    \n",
+    "image_indexes = [3435, 4826, 5165, 2135, 739]\n",
+    "for i in image_indexes:\n",
+    "    predict_and_show_image_by_index(i)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7df2a051-914d-4b0f-bb25-89528f62ef52",
    "metadata": {},
    "outputs": [],
    "source": []
