Code for user interaction

--- a/Embed10/545Project3/MovieEmbedExplore.ipynb
+++ b/Embed10/545Project3/MovieEmbedExplore.ipynb
@@ -729,12 +729,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a89134c7",
+   "metadata": {},
+   "source": [
+    "## interactive code that allows users to input their queries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7df2a051-914d-4b0f-bb25-89528f62ef52",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "from transformers import CLIPProcessor, CLIPModel\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import json\n",
+    "from IPython.display import Image, display\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "model = CLIPModel.from_pretrained(\"openai/clip-vit-large-patch14\")\n",
+    "processor = CLIPProcessor.from_pretrained(\"openai/clip-vit-large-patch14\")\n",
+    "\n",
+    "\n",
+    "with open(\"honey_i_shrunk_the_kids_movie_embeddings_1_second.json\", 'r') as file:\n",
+    "    movie_embeddings = json.load(file)\n",
+    "\n",
+    "def find_and_display_matches(text_queries, top_k=5):\n",
+    " \n",
+    "    inputs = processor(text=text_queries, return_tensors=\"pt\", padding=True)\n",
+    "  \n",
+    "    text_embeddings = model.get_text_features(**inputs)\n",
+    "  \n",
+    "    text_embeddings_np = text_embeddings.detach().numpy()\n",
+    "    movie_embeddings_np = np.array([movie['embedding'] for movie in movie_embeddings])\n",
+    "\n",
+    "    similarities = cosine_similarity(text_embeddings_np, movie_embeddings_np)\n",
+    "    \n",
+    "\n",
+    "    for index, text_query in enumerate(text_queries):\n",
+    "        print(f\"Top matches for: {text_query}\")\n",
+    "        top_indices = np.argsort(similarities[index])[::-1][:top_k]\n",
+    "        for i in top_indices:\n",
+    "            frame = movie_embeddings[i]['input']\n",
+    "            print(f\"Displaying frame: {frame}\")\n",
+    "            display(Image(filename=f'thumbnails_folder2large/{frame}'))\n",
+    "\n",
+    "user_query = input(\"Enter your query (e.g., 'a photo of a dog', 'a photo of main actors', 'a photo of an ant'): \")\n",
+    "find_and_display_matches([user_query])\n"
+   ]
   }
  ],
  "metadata": {
