--- a/Embed10/545Project3/MovieEmbedExplore.ipynb
+++ b/Embed10/545Project3/MovieEmbedExplore.ipynb
@@ -781,6 +781,102 @@
     "user_query = input(\"Enter your query (e.g., 'a photo of a dog', 'a photo of main actors', 'a photo of an ant'): \")\n",
     "find_and_display_matches([user_query])\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "477f35ec",
+   "metadata": {},
+   "source": [
+    "## Yolo model for recognizing and counting objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2ec7f6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "\n",
+    "json_file_path = 'honey_i_shrunk_the_kids_movie_embeddings_1_second.json' \n",
+    "\n",
+    "\n",
+    "with open(json_file_path, 'r') as file:\n",
+    "    moive_embeddings = json.load(file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "199371e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import os\n",
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "import cv2\n",
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "\n",
+    "model = torch.hub.load('ultralytics/yolov5', 'yolov5s', pretrained=True)\n",
+    "\n",
+    "\n",
+    "image_directory = 'thumbnails_folder2large/'  \n",
+    "\n",
+    "\n",
+    "image_files = [f for f in os.listdir(image_directory) if os.path.isfile(os.path.join(image_directory, f))]\n",
+    "\n",
+    "# Initialize a Counter to keep track of object counts\n",
+    "total_counts = Counter()\n",
+    "\n",
+    "\n",
+    "for image_file in image_files:\n",
+    "    # Construct full image path\n",
+    "    image_path = os.path.join(image_directory, image_file)\n",
+    "    \n",
+    "\n",
+    "    results = model(image_path)\n",
+    "  \n",
+    "    print(f\"Results for {image_file}:\")\n",
+    "    print(results.pandas().xyxy[0])\n",
+    "    \n",
+    "    \n",
+    "    print(f\"Results for {image_path}:\")\n",
+    "    df = results.pandas().xyxy[0]  \n",
+    "    print(df)\n",
+    "    \n",
+    "    # Update the total counts\n",
+    "    counts = df['name'].value_counts()\n",
+    "    total_counts.update(counts)\n",
+    "    \n",
+    "  \n",
+    "    results.show()  \n",
+    "    results.save(save_dir='output/')  \n",
+    "\n",
+    "    object_counts = results.pandas().xyxy[0]['name'].value_counts()\n",
+    "    print(\"Object counts:\", object_counts)\n",
+    "    print(\"\\n\")  \n",
+    "    \n",
+    "    \n",
+    "print(\"Total counts of detected objects:\")\n",
+    "for object_type, count in total_counts.items():\n",
+    "    print(f\"{object_type}: {count}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac6c36d4",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
