Hypothesis 3 and updated yolo model

--- a/Embed10/545Project3/MovieEmbedExplore.ipynb
+++ b/Embed10/545Project3/MovieEmbedExplore.ipynb
@@ -874,6 +874,101 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f1a884b7",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7810bdb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "\n",
+    "json_file_path = 'honey_i_shrunk_the_kids_movie_embeddings_1_second.json' \n",
+    "\n",
+    "\n",
+    "with open(json_file_path, 'r') as file:\n",
+    "    moive_embeddings = json.load(file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1678d69a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import os\n",
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "import cv2\n",
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "model = torch.hub.load('ultralytics/yolov5', 'yolov5s', pretrained=True)\n",
+    "\n",
+    "\n",
+    "image_directory = '545project3/thumbnails_folder2large/'\n",
+    "\n",
+    "# List the first 100 images in the image file directory\n",
+    "image_files = [f for f in os.listdir(image_directory) if os.path.isfile(os.path.join(image_directory, f))]\n",
+    "image_files = image_files[:100]  \n",
+    "\n",
+    "# Initialize a Counter to keep track of object counts\n",
+    "total_counts = Counter()\n",
+    "\n",
+    "\n",
+    "for image_file in image_files:\n",
+    "   \n",
+    "    image_path = os.path.join(image_directory, image_file)\n",
+    "\n",
+    "   \n",
+    "    results = model(image_path)\n",
+    "\n",
+    "  \n",
+    "    print(f\"Results for {image_file}:\")\n",
+    "    df = results.pandas().xyxy[0]  # Results as DataFrame\n",
+    "    print(df)\n",
+    "\n",
+    "    # Update the total counts of objects\n",
+    "    counts = df['name'].value_counts()\n",
+    "    total_counts.update(counts)\n",
+    "\n",
+    "    results.show()  \n",
+    "    results.save(save_dir='output/')  \n",
+    "\n",
+    "   \n",
+    "    object_counts = df['name'].value_counts()\n",
+    "    print(\"Object counts:\", object_counts)\n",
+    "    print(\"\\n\")\n",
+    "\n",
+    "\n",
+    "print(\"Total counts of detected objects:\")\n",
+    "for object_type, count in total_counts.items():\n",
+    "    print(f\"{object_type}: {count}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "340a7185",
+   "metadata": {},
+   "source": [
+    "Hypothesis 3 <br>\n",
+    "* Look for a model that can analyze an image to identify the type  of objets in the image\n",
+    "* Use counter to count the number of each object in the image\n",
+    "\n",
+    "We used Yolo model, an open source model we got from the internet, to identify objects in an image. We initially analyzed the entire images in the thumpnail_folder, but found out that it wasn't a good idea because the code was slow, so we decided to analyze the first 100 images in the image frame.The detected results are stored in a DataFrame df, which is printed out. The DataFrame contains columns such as xmin, xmax, ymin, ymax, confidence, and name of the detected object.\n",
+    "The detected objects are overlaid on the image with bounding boxes and the image is displayed using matplotlib. After all images are processed, the total counts of detected objects across all images are printed. This provides a summary of how many of each type of object were detected in the analyzed images.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ac6c36d4",
    "metadata": {},
    "source": []
